feat: add funding configuration and update build triggers; modify README and package metadata

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
 name: Product Build Workflow
 
-on:
-  push:
-    branches:
-      - "*"
+on: [push, pull_request]
 
 permissions:
   contents: write
